--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name" : "Reconator",
   "description": "An Automated Recon Framework",
-  "repository": "https://github.com/gokulapap/Reconator",
+  "repository": "https://github.com/moonymind/Reconator",
   "logo": "https://i.imgur.com/OuplaeQ.png",
   "keywords": ["python", "recon", "automation"],
   "website": "https://t.me/+cpbGih_iO50wNDg1",
@@ -11,7 +11,7 @@
             "description": "Go to BotFather bot in telegram https://telegram.me/BotFather and create a bot to get the api key",
             "required": true
         },
-        "CHAT_ID": {
+        "CHAT_ID": { 
             "description": "Go to chat_id_echo bot and get your chat id",
             "required": true
         }
